# mcp-travel-server

./: README.md  duffel_client.py  main.py  mcp-faq.md  pyproject.toml  step-by-step-tutorial.md
config/: duffel_config.py
models/: __init__.py  flight_offer.py  flight_search_params.py
resources/: faq.py
tools/: flight_tools.py
